--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "chart.js": "^4.4.3",
+    "firebase": "^10.12.2",
+    "framer-motion": "^11.2.11",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
